// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Total component should render Summary Total component in balanced state 1`] = `
<div>
  <div
    class="px-2 pt-6 pb-4 space-y-4 border rounded border-slate-400 h-fit"
  >
    <h2
      class="text-gray-800 font-bold pl-2 text-xl leading-7"
    >
      <span>
        Summary total (monthly)
      </span>
    </h2>
    <div
      class="space-y-2"
    >
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 bg-gray-100"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Retirement income
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          £4,000.00
        </span>
      </div>
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 bg-gray-100"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Your spending
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          £3,000.00
        </span>
      </div>
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 text-white bg-gray-650"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Balance
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          £1,000.00
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Total component should render Summary Total component in negative state 1`] = `
<div>
  <div
    class="px-2 pt-6 pb-4 space-y-4 border rounded border-slate-400 h-fit"
  >
    <h2
      class="text-gray-800 font-bold pl-2 text-xl leading-7"
    >
      <span>
        Summary total (monthly)
      </span>
    </h2>
    <div
      class="space-y-2"
    >
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 bg-gray-100"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Retirement income
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          £4,000.00
        </span>
      </div>
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 bg-gray-100"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Your spending
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          £5,000.00
        </span>
      </div>
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 text-white bg-red-700"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Balance
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          -£1,000.00
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Total component should render Summary Total component in positive state 1`] = `
<div>
  <div
    class="px-2 pt-6 pb-4 space-y-4 border rounded border-slate-400 h-fit"
  >
    <h2
      class="text-gray-800 font-bold pl-2 text-xl leading-7"
    >
      <span>
        Summary total (monthly)
      </span>
    </h2>
    <div
      class="space-y-2"
    >
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 bg-gray-100"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Retirement income
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          £4,000.00
        </span>
      </div>
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 bg-gray-100"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Your spending
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          £3,000.00
        </span>
      </div>
      <div
        class="py-[22px] pl-4 pr-6 rounded text-lg flex justify-between gap-4 text-white bg-green-700"
      >
        <p
          class="break-words m-0 grow"
          data-testid="paragraph"
        >
          Balance
        </p>
        <span
          class="font-bold justify-self-end whitespace-nowrap"
        >
          £1,000.00
        </span>
      </div>
    </div>
  </div>
</div>
`;
